[gd_scene load_steps=4 format=3 uid="uid://cdx20pt03hgda"]

[ext_resource type="Script" path="res://menus/multiplayer_menu.gd" id="1_xit1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t88ej"]
bg_color = Color(0.157331, 0.193666, 0.402028, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ut22x"]
bg_color = Color(0.157331, 0.193666, 0.402028, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xit1i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -90.0
offset_right = 148.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 48
text = "MAIN MENU"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NameTextEdit" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Nickname"
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IpTextEdit" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0.156863, 0.192157, 0.403922, 1)
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true
caret_type = 1

[node name="PortTextEdit" type="TextEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme_override_colors/background_color = Color(0.157331, 0.193666, 0.402028, 1)
placeholder_text = "3522"
scroll_fit_content_height = true
caret_type = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Enable PQC"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="JoinButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_t88ej")
text = "Join"

[node name="HostButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ut22x")
text = "Host"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
